--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "cloudinary": "^1.13.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
