--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^0.23.0",
     "body-parser": "^1.18.3",
-    "cloudinary": "^1.13.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "pg-promise": "^8.5.2"
