--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "cloudinary": "^1.13.2",
+    "connect-pg-simple": "^5.0.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "pg-promise": "^8.5.2"
   }
 }
