--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
-    "cloudinary": "^1.13.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "pg-promise": "^8.5.2"
+    "pg-promise": "^8.5.2",
+    "twilio": "^3.23.2"
   }
 }
