--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "hibp": "^7.2.1",
     "pg-promise": "^8.5.2"
   }
 }
