--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
+    "connect-pg-simple": "^5.0.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "twilio": "^3.23.2",
-    "connect-pg-simple": "^5.0.0",
     "express-session": "^1.15.6",
-    "pg-promise": "^8.5.2"
+    "follow-redirects": "^1.5.9",
+    "image-download": "^1.1.0",
+    "pg-promise": "^8.5.2",
+    "twilio": "^3.23.2"
   }
 }
